--- a/client/group_post.jade
+++ b/client/group_post.jade
@@ -1,9 +1,9 @@
-template(name='course_post_view')
+template(name='group_post_view')
     with current_doc
         .ui.stackable.padded.grid
             .row 
                 .three.wide.column
-                    a.ui.circular.basic.button(href="/course/#{course_id}")
+                    a.ui.circular.basic.button(href="/group/#{group_id}")
                         i.chevron.left.icon
                         i.chalkboard.big.icon
                     .ui.large.inline.header #{title}
@@ -11,15 +11,9 @@ template(name='course_post_view')
                     // .ui.inline.grey.header {{from_now start_datetime}}
                     
                     if can_edit
-                        a.edit_course_post(href="/course/#{course_id}/post/#{_id}/edit" title='edit')
+                        a.edit_group_post(href="/group/#{group_id}/post/#{_id}/edit" title='edit')
                             i.large.circular.link.pencil.icon
                     img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
-                    // .ui.segment
-                    //     .ui.header 
-                    //         small author
-                    //     a.ui.header(href="/user/#{_author.username}") 
-                    //         img.ui.avatar.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                    //         |#{_author.username}
                     .ui.list
                         .item #{views} views
                     each viewers
@@ -35,8 +29,6 @@ template(name='course_post_view')
                     +array_view key='time_tags' label='time tags' icon='clock' direct=true
                     +array_view key='location_tags' label='location tags' icon='marker' direct=true
                 .thirteen.wide.column
-                    // a.ui.header(href="/user/#{target.username}")
-                    //     |#{target.username}
                     if youtube_id
                         +youtube_view key='youtube_id' label='youtube id' direct=true
                     if raw 
@@ -50,17 +42,17 @@ template(name='course_post_view')
                     if watson
                         +watson_view
 
-template(name='course_post_edit')
+template(name='group_post_edit')
     with current_doc
         .ui.stackable.padded.grid
             .row
                 .four.wide.column.scrolling
-                    a.ui.icon.green.big.circular.button(href="/course/#{course_id}/post/#{_id}" title='save')
+                    a.ui.icon.green.big.circular.button(href="/group/#{group_id}/post/#{_id}" title='save')
                         i.checkmark.big.icon
                     .ui.inline.header 
                         i.pencil.icon
-                        |edit course post
-                    i.large.link.circular.red.remove.icon.delete_course_post
+                        |edit group post
+                    i.large.link.circular.red.remove.icon.delete_group_post
                     +image_edit key='image_id' label='image' direct=true
                     div 
                     +array_edit key='tags' label='tags' direct=true
