--- a/client/group.jade
+++ b/client/group.jade
@@ -14,50 +14,13 @@ template(name='group_home')
     with current_doc
         .ui.stackable.padded.grid
             .row 
-                .sixteen.wide.column.scrolling
-                    a.ui.circular.icon.button(href="/school")
-                        i.university.icon
+                .sixteen.wide.center.aligned.column
+                    a.ui.circular.icon.basic.button(href="/")
+                        i.home.icon
                     a.ui.center.aligned.inline.header(href="/group/#{_id}")
                         if image
                             img.ui.avatar.image(src="{{c.url image width=400 height=400 crop='fill'}}")
                         |#{title}
-                    // .ui.fluid.vertical.small.menu
-                    //     a.disabled.grey.item(href="/group/#{_id}/content" class="{{isActiveRoute 'group_content'}}")
-                    //         i.content.icon
-                    //         |content
-                    //     a.disabled.grey.item(href="/group/#{_id}/calendar" class="{{isActiveRoute 'group_calendar'}}")
-                    //         i.calendar.icon
-                    //         |calendar
-                    //     a.disabled.grey.item(href="/group/#{_id}/classlist" class="{{isActiveRoute 'group_classlist'}}")
-                    //         i.users.icon
-                    //         |class list
-                    //     a.disabled.grey.item(href="/group/#{_id}/locker" class="{{isActiveRoute 'group_locker'}}")
-                    //         i.inbox.icon
-                    //         |locker
-                    //     a.disabled.grey.item(href="/group/#{_id}/assignments" class="{{isActiveRoute 'group_assignments'}}")
-                    //         i.content.icon
-                    //         |assignments
-                    //     a.disabled.grey.item(href="/group/#{_id}/discussions" class="{{isActiveRoute 'group_discussions'}}")
-                    //         i.calendar.icon
-                    //         |discussions
-                    //     a.disabled.grey.item(href="/group/#{_id}/groups" class="{{isActiveRoute 'group_groups'}}")
-                    //         i.users.icon
-                    //         |groups
-                    //     a.disabled.grey.item(href="/group/#{_id}/quizzes" class="{{isActiveRoute 'group_quizzes'}}")
-                    //         i.question.icon
-                    //         |quizzes
-                    //     a.disabled.item(href="/group/#{_id}/surveys" class="{{isActiveRoute 'group_surveys'}}")
-                    //         i.question.icon
-                    //         |surveys
-                    //     a.disabled.item(href="/group/#{_id}/grades")
-                    //         i.tasks.icon
-                    //         |grades
-                    //     a.disabled.item(href="/group/#{_id}/progress" class="{{isActiveRoute 'group_progress'}}")
-                    //         i.tasks.icon
-                    //         |class progress
-                    //     a.disabled.item(href="/group/#{_id}/competencies" class="{{isActiveRoute 'group_competencies'}}")
-                    //         i.checkmark.icon
-                    //         |competencies
                     if can_edit
                         a.edit_group(href="/group/#{_id}/edit")
                             i.big.blue.pencil.circular.link.icon
@@ -81,7 +44,7 @@ template(name='group_home')
                         |#{group_posts.count} posts
                     .ui.circular.basic.icon.button.add_post
                         i.plus.icon
-                .sixteen.wide.column
+                .sixteen.wide.center.aligned.column
                     if selected_group_tags
                         // if many_tags
                         //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
@@ -114,6 +77,7 @@ template(name='group_home')
                         .ui.basic.compact.small.button.zoomer.select_location_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
                             strong #{name}
                         
+                .sixteen.wide.column
                     .scrolling
                         each group_posts
                             a.ui.fluid.link.card(href="/group/#{group_id}/post/#{_id}") 
@@ -127,7 +91,8 @@ template(name='group_home')
                                         if raw
                                             |!{raw}
                                     each tags
-                                        .ui.small.basic.label #{this}
+                                        +flat_group_tag_selector
+                                        // .ui.small.basic.label #{this}
 
 
 template(name='group_edit')
