fix some group and course db refs

--- a/client/group.jade
+++ b/client/group.jade
@@ -80,7 +80,7 @@ template(name='group_home')
                 .sixteen.wide.column
                     .scrolling
                         each group_posts
-                            a.ui.fluid.link.card(href="/group/#{group_id}/post/#{_id}") 
+                            a.ui.fluid.link.card(href="/group/#{course_id}/post/#{_id}") 
                                 .content 
                                     .header #{title}
                                     if youtube_id
