--- a/client/group_post.jade
+++ b/client/group_post.jade
@@ -3,9 +3,8 @@ template(name='group_post_view')
         .ui.stackable.padded.grid
             .row 
                 .three.wide.column
-                    a.ui.circular.basic.button(href="/group/#{group_id}")
+                    a.ui.circular.basic.large.icon.button(href="/group/#{course_id}")
                         i.chevron.left.icon
-                        i.chalkboard.big.icon
                     .ui.large.inline.header #{title}
                     // div
                     // .ui.inline.grey.header {{from_now start_datetime}}
@@ -47,7 +46,7 @@ template(name='group_post_edit')
         .ui.stackable.padded.grid
             .row
                 .four.wide.column
-                    a.ui.icon.green.big.circular.button(href="/group/#{group_id}/post/#{_id}" title='save')
+                    a.ui.icon.green.big.circular.button(href="/group/#{course_id}/post/#{_id}" title='save')
                         i.checkmark.big.icon
                     .ui.inline.header 
                         i.pencil.icon
