remove comments, three column

--- a/client/fields.jade
+++ b/client/fields.jade
@@ -295,7 +295,7 @@ template(name='textarea_view')
 
 template(name='raw_edit')
     .ui.large.form
-        .ui.small.inline.header raw
+        // .ui.small.inline.header raw
         .field
             label 
                 if icon
