--- a/client/home.jade
+++ b/client/home.jade
@@ -141,7 +141,7 @@ template(name='home_tag_selector')
         //     small #{count}
         
 template(name='home_unselect_tag')
-    a.unselect_home_tag.ui.black.large.compact.inverted.button(href='#')
+    a.unselect_home_tag.ui.large.compact.active.button(href='#')
         // if term
         //     if term.watson.metadata.image
         //         img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
