say tags when adding and say body when click

--- a/client/group_post.jade
+++ b/client/group_post.jade
@@ -32,7 +32,7 @@ template(name='group_post_view')
                         +youtube_view key='youtube_id' label='youtube id' direct=true
                     if raw 
                         |!{raw}
-                    .scrolling
+                    .say_this.say_body
                         |!{content}
                     div 
                     .spacer
