--- a/client/fields.jade
+++ b/client/fields.jade
@@ -1,6 +1,6 @@
 template(name='youtube_edit')
     .ui.labeled.fluid.icon.input
-        .ui.basic.label 
+        .ui.label 
             // if icon
             //     i.icon(class=icon)
             |youtube id
@@ -517,13 +517,13 @@ template(name='array_edit')
     if field_value
         each field_value
             if in_dev
-                .ui.large.basic.circular.label
+                .ui.large.circular.label
                     i.delete.icon.remove_element
                     |#{this}
-                // .ui.compact.basic.circular.button.pick_tag
+                // .ui.compact.circular.button.pick_tag
                 //     |#{this}
             else
-                .ui.compact.basic.circular.button.pick_tag
+                .ui.compact.circular.button.pick_tag
                     |#{this}
 
 // template(name='array_edit')
@@ -544,13 +544,13 @@ template(name='array_edit')
 //     if field_value
 //         each field_value
 //             if in_dev
-//                 .ui.large.basic.circular.label
+//                 .ui.large.circular.label
 //                     i.delete.icon.remove_element
 //                     |#{this}
-//                 .ui.compact.basic.circular.button.pick_tag
+//                 .ui.compact.circular.button.pick_tag
 //                     |#{this}
 //             else
-//                 .ui.compact.basic.circular.button.pick_tag
+//                 .ui.compact.circular.button.pick_tag
 //                     |#{this}
             
                 
@@ -560,13 +560,13 @@ template(name='array_view')
         if icon
             i.icon(class=icon)
         if label
-            .ui.inline.small.grey.header(title=title)
+            .ui.inline.small.grey.header.say_body(title=title)
                 |#{label}
         else
             .ui.inline.small.grey.header(title=title)
                 |#{key}
         each field_value
-            .ui.basic.label #{this}
+            .ui.label.say_body #{this}
 
 
 template(name='children_edit')
