--- a/client/group_post.jade
+++ b/client/group_post.jade
@@ -12,11 +12,7 @@ template(name='group_post_view')
                     if can_edit
                         a.edit_group_post(href="/group/#{group_id}/post/#{_id}/edit" title='edit')
                             i.large.circular.link.pencil.icon
-                    img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
-                    .ui.list
-                        .item #{views} views
-                    each viewers
-                        .ui.label #{username
+                    | #{views} views
                     +array_edit key='tags' label='tags' direct=true
                     // +voting_full
                     +link_view key='link' label='link' direct=true
@@ -24,6 +20,7 @@ template(name='group_post_view')
                     +array_edit key='time_tags' label='time tags' icon='clock' direct=true
                     +array_edit key='location_tags' label='location tags' icon='marker' direct=true
                 .nine.wide.column
+                    img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
                     if youtube_id
                         +youtube_view key='youtube_id' label='youtube id' direct=true
                     if raw 
@@ -53,13 +50,11 @@ template(name='group_post_edit')
                     div 
                     +array_edit key='tags' label='tags' direct=true
                     +link_edit key='link' label='link' direct=true
-                    if is_admin 
-                        +text_edit key='model' label='model' direct=true
                     +array_edit key='time_tags' label='time tags' icon='clock' direct=true
                     +array_edit key='location_tags' label='location tags' icon='marker' direct=true
+                    +raw_edit key='raw' label='raw' direct=true
                 .twelve.wide.column
-                    +youtube_edit key='youtube_id' label='youtube id' direct=true
                     +text_edit key='title' label='title' direct=true
                     +html_edit key='content' label='content' direct=true
-                    +raw_edit key='raw' label='raw' direct=true
+                    +youtube_edit key='youtube_id' label='youtube id' direct=true
         
