--- a/client/client.jade
+++ b/client/client.jade
@@ -34,6 +34,10 @@ head
         gtag('config', 'G-GLYPPRGJFQ');
 
 
+template(name='front')
+    .ui.basic.center.aligned.segment
+        i.massive.grey.yin.yang.icon
+
 template(name='layout')
     // +status
     if is_admin
